--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <main class="content">
         <h1>Tentang Saya</h1>
         <p>
-          Saya adalah lulusan SMK YPC Tasikmalaya tahun 2024, berusia 19 tahun.
+          Saya adalah lulusan SMK YPC Tasikmalaya tahun 2024.
           Saya memiliki kemampuan dalam Frontend Web Development dengan HTML,
           CSS, JAVASCRIPT serta dapat menggunakan library Javascript seperti
           ReactJs. Saya juga memahami dalam bahasa PHP serta framework Laravel.
