--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- Home Section -->
     <section class="home" id="home">
       <main class="content">
-        <img src="image/profile.jpg" alt="" />
+        <img src="image/profile.jpg" alt="ARWIESA" />
         <h1>Arya Wira Saputra</h1>
         <p>Junior Frontend Web Developer</p>
       </main>
@@ -73,32 +73,32 @@
       <main class="content">
         <h1>Projek Saya</h1>
         <div class="list">
-          <div class="card">
+          <div class="card animation">
             <img src="image/projects/thrift.png" alt="" />
             <div class="card-title">Thrift Shop</div>
             <a href="https://arwiesa27.github.io/thriftshop/">Lihat</a>
           </div>
-          <div class="card">
+          <div class="card animation">
             <img src="image/projects/musicplayer.png" alt="" />
             <div class="card-title">Music Player</div>
             <a href="https://arwiesa27.github.io/musicplayer/">Lihat</a>
           </div>
-          <div class="card">
+          <div class="card animation">
             <img src="image/projects/lightbox.png" alt="" />
             <div class="card-title">Lightbox Gallery</div>
             <a href="https://arwiesa27.github.io/lightboxgallery/">Lihat</a>
           </div>
-          <div class="card">
+          <div class="card animation">
             <img src="image/projects/kalk.png" alt="" />
             <div class="card-title">Kalkulator</div>
             <a href="https://arwiesa27.github.io/kalkulator/">Lihat</a>
           </div>
-          <div class="card">
+          <div class="card animation">
             <img src="image/projects/to-do-list.png" alt="" />
             <div class="card-title">ToDo App</div>
             <a href="https://arwiesa27.github.io/todoapp/">Lihat</a>
           </div>
-          <div class="card">
+          <div class="card animation">
             <img src="image/projects/rgb.png" alt="" />
             <div class="card-title">RGB Generator</div>
             <a href="https://arwiesa27.github.io/rgbgenerator/">Lihat</a>
