--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- Home Section -->
     <section class="home" id="home">
       <main class="content">
-        <img src="/image/profile.jpg" alt="ARWIESA" />
+        <img src="./image/profile.jpg" alt="ARWIESA" />
         <h1>Arya Wira Saputra</h1>
         <p>Junior Frontend Web Developer</p>
       </main>
@@ -45,23 +45,23 @@
         <h1>- - v - -</h1>
         <div class="skill">
           <figure>
-            <img src="image/skill/html.png" alt="" />
+            <img src="./image/skill/html.png" alt="" />
             <figcaption>HTML</figcaption>
           </figure>
           <figure>
-            <img src="image/skill/css.png" alt="" />
+            <img src="./image/skill/css.png" alt="" />
             <figcaption>CSS</figcaption>
           </figure>
           <figure>
-            <img src="image/skill/js.png" alt="" />
+            <img src="./image/skill/js.png" alt="" />
             <figcaption>JAVASCRIPT</figcaption>
           </figure>
           <figure>
-            <img src="image/skill/react.png" alt="" />
+            <img src="./image/skill/react.png" alt="" />
             <figcaption>REACT JS</figcaption>
           </figure>
           <figure>
-            <img src="image/skill/laravel.png" alt="" />
+            <img src="./image/skill/laravel.png" alt="" />
             <figcaption>LARAVEL</figcaption>
           </figure>
         </div>
