--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- Home Section -->
     <section class="home" id="home">
       <main class="content">
-        <img src="./image/profile.jpg" alt="ARWIESA" />
+        <img src="image/profile.jpg" alt="ARWIESA" />
         <h1>Arya Wira Saputra</h1>
         <p>Junior Frontend Web Developer</p>
       </main>
@@ -94,12 +94,12 @@
             <a href="https://arwiesa27.github.io/kalkulator/">Lihat</a>
           </div>
           <div class="card animation">
-            <img src="./image/projects/to-do-list.png" alt="" />
+            <img src="image/projects/to-do-list.png" alt="" />
             <div class="card-title">ToDo App</div>
             <a href="https://arwiesa27.github.io/todoapp/">Lihat</a>
           </div>
           <div class="card animation">
-            <img src="./image/projects/rgb.png" alt="" />
+            <img src="image/projects/rgb.png" alt="" />
             <div class="card-title">RGB Generator</div>
             <a href="https://arwiesa27.github.io/rgbgenerator/">Lihat</a>
           </div>
